# eoghan_rua_ios

./: app.py  export_excel.py  pyproject.toml  team_logic.py
.github/workflows/: ios-build.yml
eoghan_rua_team_selector/: __init__.py  _init_.py  app.py  bootstrap.py  export_excel.py  pyproject.toml  team_logic.py
eoghan_rua_team_selector/views/: _init_.py  builder.py  home.py  preview.py  splash.py
views/: builder.py  home.py  preview.py  splash.py
