[project]
name = "eoghanruateamselector "
version = "1.0.0"
description = "Offline team selector app for Eoghan Rua GAA."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eoghan Rua GAA", email = "info@eoghanrua.ie" }]
license = { file = "LICENSE" }
homepage = "https://eoghanrua.ie"

[tool.briefcase]
project_name = "Eoghan Rua Team Selector"
bundle = "ie.eoghanrua"
url = "https://eoghanrua.ie"
sources = ["eoghan_rua_team_selector"]

[tool.briefcase.app.eoghan_rua_team_selector]
formal_name = "Eoghan Rua Team Selector"
description = "Offline team selector app for Eoghan Rua GAA."
app_name = "eoghan_rua_team_selector"

# Use the Python bootstrap module to start the app
module = "eoghan_rua_team_selector.bootstrap"

# Branding assets
icon   = "assets/icon.png"
splash = "assets/splash.png"

# Files loaded at runtime from the app bundle
resources = [
  "assets/crest.png",
]

# iOS app dependencies
requires = [
  "toga-ios>=0.4.7",
  "Pillow>=10.0.0",
  "XlsxWriter>=3.1.9",
]

# You can add platform-specific config later if needed:
# [tool.briefcase.app.eoghan_rua_team_selector.iOS]
